--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,4 +1,16 @@
-appname = beego
+appname = mahjong-science-server
 httpport = 8080
 runmode = dev
 copyrequestbody = true
+memcached = 127.0.0.1:11211
+appId = wxc7d8eb6c35492390
+
+mysqluser = "root"
+mysqlpass = "123456"
+mysqlurls = "127.0.0.1"
+mysqldb   = "beego"
+
+
+username =
+password =
+appSecret =
